z-index bug

--- a/knights.css
+++ b/knights.css
@@ -48,6 +48,7 @@ body {
   justify-content: center;
   align-items: center;
   opacity: 0;
+  z-index: -1;
 }
 
 .square {
@@ -172,6 +173,7 @@ body {
     --side-btn-width: 11vw;
     --middle-btn-width: 52vw;
   }
+
   body {
     flex-direction: column;
   }
@@ -186,9 +188,11 @@ body {
     width: 10vw;
     height: 10vw;
   }
+
   .up-down {
-    width:4vw;
+    width: 4vw;
   }
+
   .card {
     margin-top: 4vh;
     width: 80vw;
@@ -200,8 +204,11 @@ body {
 @keyframes opacity {
   0% {
     opacity: 1;
+    z-index: 80;
   }
+
   100% {
     opacity: 0;
+    z-index: -1;
   }
 }
